@@ -1,0 +1,178 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <string name="about_feedback">Atsauksmes:</string>
+    <string name="about_homepage">Mājaslapa:</string>
+    <string name="AboutText">Paroles ir Android-versija programmai KeePass.</string>
+    <string name="about_twitter">Tviters:</string>
+    <string name="accept">Pieņemt</string>
+    <string name="add_entry">Jauns ieraksts</string>
+    <string name="add_group">Jauna grupa</string>
+    <string name="add_group_title">Jauns gr. nosaukums</string>
+    <string name="algorithm">Algoritms</string>
+    <string name="algorithm_colon">Algoritms:</string>
+    <string name="app_name">Paroles</string>
+    <string name="app_timeout">Pielikuma taimauts</string>
+    <string name="app_timeout_summary">Bloķēšanas taimauts, kad programma nav aktīva.</string>
+    <string name="application">Programma</string>
+    <string name="application_settings">Programmas iestatījumi</string>
+    <string name="beta_dontask">Turpmāk nerādīt</string>
+    <string name="beta_warning">Atbalsts kdbx failiem ir eksperimentāls. Dublējiet datu bāzi pirms izmaiņu saglabāšanas.</string>
+    <string name="brackets">Iekavās</string>
+    <string name="browser_intall_text">Failu pārlūkošanai nepieciešams pārlūks.</string>
+    <string name="building_search_idx">Indeksēšana…</string>
+    <string name="cancel">Atcelt</string>
+    <string name="ClearClipboard">Starpliktuve notīrīta.</string>
+    <string name="clipboard_error_title">Starpliktuves kļūda</string>
+    <string name="clipboard_error">Dažiem Samsung tālruņiem ir problēmas ar starpliktuves lietošanu. Lai saņemtu sīkāku informāciju, dodieties uz:</string>
+    <string name="clipboard_error_clear">Starpliktuves tīrīšana neizdevās</string>
+    <string name="clipboard_timeout">Starpliktuves taimauts</string>
+    <string name="clipboard_timeout_summary">Notīrīšanas taimauts pēc lietotājvārda vai paroles kopēšana starpliktuvē</string>
+    <string name="copy_username">Lietotājvārds uz starpliktuvi</string>
+    <string name="copy_password">Parole uz starpliktuvi</string>
+    <string name="creating_db_key">Izveidot datu bāzes atslēgu…</string>
+    <string name="current_group">Pašreizējā grupa:</string>
+    <string name="current_group_root">Pašreizējā grupa: Root</string>
+    <string name="database">Datu bāze</string>
+    <string name="decrypting_db">Datu bāzes atšifrēšana…</string>
+    <string name="decrypting_entry">Ieraksta atšifrēšana</string>
+    <string name="default_checkbox">Izmantot šo kā manu noklusējuma datu bāzi</string>
+    <string name="digits">Cipari</string>
+    <string name="disclaimer_formal">Paroles Aurortiesības 2009–2012 Brian Pellin.</string>
+    <string name="ellipsis">…</string>
+    <string name="enter_filename">Ievadiet datu bāzes nosaukumu:</string>
+    <string name="entry_accessed">Piekļuve:</string>
+    <string name="entry_and_or">Ievadiet paroli/atslēgas failu, lai atbloķētu savu datu bāzi:</string>
+    <string name="entry_cancel">Atcelt</string>
+    <string name="entry_comment">Komentāri:</string>
+    <string name="entry_confpassword">Apstipriniet paroli:</string>
+    <string name="entry_created">Izveidots:</string>
+    <string name="entry_expires">Derīguma termiņš beidzas:</string>
+    <string name="entry_keyfile">Atslēgas fails (pēc izvēles)</string>
+    <string name="entry_modified">Modificēts:</string>
+    <string name="entry_password">Parole:</string>
+    <string name="entry_save">Saglabāt</string>
+    <string name="entry_title">Vārds:</string>
+    <string name="entry_url">URL:</string>
+    <string name="entry_user_name">Lietotāja vārds:</string>
+    <string name="error_arc4">ArcFour plūsmas šifrs netiek atbalstīts.</string>
+    <string name="error_can_not_handle_uri">Neizdevās pātiet uz norādīto adresi.</string>
+    <string name="error_could_not_create_group">Neizdevās izveidot grupu.</string>
+    <string name="error_could_not_create_parent">Neizdevās izveidot mātes direktoriju.</string>
+    <string name="error_database_exists">Šāds fails jau pastāv.</string>
+    <string name="error_database_settings">Nepareizi datu bāzes iestatījumi.</string>
+    <string name="error_failed_to_launch_link">Neizdevās atvērt saiti.</string>
+    <string name="error_filename_required">Nepieciešams faila nosaukums.</string>
+    <string name="error_file_not_create">Neizdevās izveidot failu:</string>
+    <string name="error_invalid_db">Nederīga datu bāze.</string>
+    <string name="error_invalid_path">Nederīgs ceļš.</string>
+    <string name="error_no_name">Vajag ievadīt faila nosaukumu</string>
+    <string name="error_nopass">Vajadzīga parole vai atslēgas fails.</string>
+    <string name="error_out_of_memory">Darbam ar datu bāzi, tālrunī nepietiek atmiņas.</string>
+    <string name="error_pass_gen_type">Ir jāatlasa vismaz viens paroles ģenerēšanas tips</string>
+    <string name="error_pass_match">Paroles nesakrīt.</string>
+    <string name="error_rounds_not_number">Ievadiet līmeni no 1 līdz 2147483648</string>
+    <string name="error_rounds_too_large">Līmenis pārāk liels. Maksimālais 2147483648</string>
+    <string name="error_string_key">A field name is required for each string.</string>
+    <string name="error_title_required">Nepieciešams nosaukums.</string>
+    <string name="error_wrong_length">Norādiet garumu lielāku par nulli</string>
+    <string name="field_name">Lauka nosaukums</string>
+    <string name="field_value">Lauka vērtība</string>
+    <string name="FileNotFound">Fails nav atrasts.</string>
+    <string name="file_browser">Failu pārlūks</string>
+    <string name="generate_password">Ģenerēt Paroli</string>
+    <string name="group">Grupa</string>
+    <string name="hint_comment">komentārs</string>
+    <string name="hint_conf_pass">apstipriniet paroli</string>
+    <string name="hint_generated_password">ģenerēt paroli</string>
+    <string name="hint_group_name">Grupas nosaukums</string>
+    <string name="hint_keyfile">atslēgas fails</string>
+    <string name="hint_length">garums</string>
+    <string name="hint_pass">parole</string>
+    <string name="hint_login_pass">Parole</string>
+    <string name="hint_title">vārds</string>
+    <string name="hint_url">url</string>
+    <string name="hint_username">lietotājvārds</string>
+    <string name="install_from_market">Instalēt no Play veikala</string>
+    <string name="install_from_website">Instalēt no Web</string>
+    <string name="InvalidPassword">Nederīga parole vai atslēgas fails.</string>
+    <string name="invalid_algorithm">Nederīgs algoritms.</string>
+    <string name="invalid_db_sig">Datu bāzes formāts nav atpazīts.</string>
+    <string name="keyfile_does_not_exist">Atslēgas fails nepastāv.</string>
+    <string name="keyfile_is_empty">Atslēgas fails ir tukšs.</string>
+    <string name="length">Garums</string>
+    <string name="list_size_title">Grupu saraksta teksta izmērs</string>
+    <string name="list_size_summary">Teksta izmērs ierakstos un grupu sarakstos</string>
+    <string name="loading_database">Ielādēt datu bāzi…</string>
+    <string name="lowercase">Lower-case</string>
+    <string name="MaskedPassword">*****</string>
+    <string name="maskpass_title">Sēpt paroles</string>
+    <string name="maskpass_summary">Sēpt paroles *****</string>
+    <string name="menu_about">Par</string>
+    <string name="menu_change_key">Mainīt galveno paroli</string>
+    <string name="menu_copy_pass">Kopēt paroli</string>
+    <string name="menu_copy_user">Kopēt lietotājvārdu</string>
+    <string name="menu_create">Izveidot</string>
+    <string name="menu_app_settings">Iestatījumi</string>
+    <string name="menu_db_settings">Datu bāzes iestatījumi</string>
+    <string name="menu_delete">Dzēst</string>
+    <string name="menu_donate">Ziedot</string>
+    <string name="menu_edit">Rediģēt</string>
+    <string name="menu_hide_password">Paslēpt paroli</string>
+    <string name="menu_homepage">Iet uz mājas lapu</string>
+    <string name="menu_lock">Bloķēt datu bāzi</string>
+    <string name="menu_open">Atvērt</string>
+    <string name="menu_rename">Pārdēvēt</string>
+    <string name="menu_search">Meklēšana</string>
+    <string name="menu_url">Saite</string>
+    <string name="minus">Minus</string>
+    <string name="never">Nekad</string>
+    <string name="no_keys">Nav ierakstu datu bāzē vai grupā.</string>
+    <string name="no_results">Nav meklēšanas rezultātu</string>
+    <string name="no_url_handler">Neizdevās atvērt saiti.</string>
+    <string name="open_recent">Atvērt pēdējo datu bāzi (noklikšķiniet, lai atvērtu):</string>
+    <string name="omitbackup_title">Nemeklēt kopijās un atkritnē</string>
+    <string name="omitbackup_summary">Izlaist kopijas un atkritni no meklēšanas rezultātiem</string>
+    <string name="pass_filename">KeePass datu bāzes faila nosaukums:</string>
+    <string name="password_title">Ievadiet datu bāzes paroli</string>
+    <string name="progress_create">Izveido jaunu datu bāzi…</string>
+    <string name="progress_title">Darbojas…</string>
+    <string name="protection">Aizsardzība</string>
+    <string name="recentfile_title">Nesen atvērtie</string>
+    <string name="recentfile_summary">Glabāt atvērto failu nosaukumus</string>
+    <string name="remember_keyfile_summary">Atcerēties šo atslēgas faila vietu</string>
+    <string name="remember_keyfile_title">Saglabāt atslēgas failu</string>
+    <string name="remove_from_filelist">Noņemt</string>
+    <string name="rijndael">Rijndael (AES)</string>
+    <string name="root">Root</string>
+    <string name="rounds">Šifrēšanas līmeņi</string>
+    <string name="rounds_explaination">Augstākā līmeņa šifrēšana sniedz lielāku aizsardzību, bet palēnina darbības ar datu bāzēm.</string>
+    <string name="rounds_hint">līmeņi</string>
+    <string name="saving_database">Datu bāzes saglabāšana…</string>
+    <string name="space">Atstarpe</string>
+    <string name="search_label">Meklēt</string>
+    <string name="show_password">Rādīt paroli</string>
+    <string name="sort_name">Kārtot pēc nosaukuma</string>
+    <string name="sort_db">Izejas</string>
+    <string name="special">Speciālie</string>
+    <string name="search_hint">Ieraksta nosaukums/apraksts</string>
+    <string name="search_results">Meklēšanas rezultāti</string>
+    <string name="twofish">Twofish</string>
+    <string name="underline">Pasvītrojums</string>
+    <string name="unsupported_db_version">Neatbalstīta datu bāzes versija.</string>
+    <string name="uppercase">Lielie burti</string>
+    <string name="warning_read_only">SD karte ir tikai lasāma. Nevarēsiet saglabāt izmaiņas datu bāzē.</string>
+    <string name="warning_unmounted">Nav SD kartes. Darbības ar datu bāzi nav iespējamas.</string>
+    <string name="version_label">Versija:</string>
+
+    <string-array name="clipboard_timeout_options">
+        <item>30 sekundes</item>
+        <item>1 minūte</item>
+        <item>5 minūtes</item>
+        <item>Nekad</item>
+    </string-array>
+    <string-array name="list_size_options">
+        <item>Mazs</item>
+        <item>Vidējs</item>
+        <item>Liels</item>
+    </string-array>
+</resources>
